# farfocel

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
benchmarks/: CMakeLists.txt  hash_map.cpp  hash_set.cpp
docs/: CMakeLists.txt  Doxyfile
editor/: README.md
engine/: CMakeLists.txt  README.md
engine/include/fr/core/: alloc.hpp  alloc_tracer.hpp  alloc_typedefs.hpp  allocation_stack.hpp  allocator.hpp  allocator_debug.hpp  allocator_typedefs.hpp  arena_alloc.hpp  arena_allocator.hpp  block_alloc.hpp  block_allocator.hpp  dynamic_array.hpp  globals.hpp  hash.hpp  hash_map.hpp  hash_set.hpp  heap_alloc.hpp  heap_allocator.hpp  impl.hpp  macros.hpp  malloc_alloc.hpp  malloc_allocator.hpp  math.hpp  mem.hpp  new_delete_alloc.hpp  new_delete_allocator.hpp  nil.hpp  optional.hpp  pair.hpp  slice.hpp  storage.hpp  string.hpp  string_base.hpp  string_view.hpp  time.hpp  tuple.hpp  typedefs.hpp  unique_ptr.hpp
engine/src/core/: globals.cpp
sandbox/: CMakeLists.txt
sandbox/src/: dynamic_array.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  alloc.cpp  allocator.cpp  dynamic_array.cpp  hash_map.cpp  hash_set.cpp  optional.cpp  pair.cpp  slice.cpp  string.cpp  tuple.cpp
tests/tests_src/: allocator.cpp  dynamic_array.cpp  hash_set.cpp  optional.cpp  slice.cpp  string.cpp  tuple.cpp
